Add FactionsUUID 4.0 support.
The next update to FactionsUUID breaks away from the historical naming of the plugin as Factions, as there are far too many plugins using the same name with different code. Great opportunity to break lots of API, so this definitely requires its own support. This commit adds such support.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,6 +17,7 @@ softdepend:
   - SuperiorSkyblock2
   - LegacyFactions
   - UltimateFactions
+  - FactionsUUID
   - Multiverse-Core
   - SimpleClan
   - zSchedulers
